2-subnets vs 3-subnets

--- a/templates/nested/2-subnets/eks-cluster.yaml
+++ b/templates/nested/2-subnets/eks-cluster.yaml
@@ -19,6 +19,7 @@ Metadata:
             - ControlPanelSecurityGroup
             - NodeSecurityGroup
             - ProvisionSecurityGroup
+            - ElbInboundCIDRs
         - Label:
             default: Provision Stack Configuration
           Parameters:
@@ -69,6 +70,8 @@ Metadata:
           default: The Kubernetes Version
         Environment:
           default: The Environment
+        ElbInboundCIDRs:
+          default: DataHub ALB Inbound CIDRs
 
 Parameters:
     RemoveTempResources:
@@ -140,6 +143,10 @@ Parameters:
     Environment:
       Type: String
       Description: The Environment
+    ElbInboundCIDRs:
+      ConstraintDescription: The Elastic Load Balancer Inbound CIDRs
+      Type: String
+      Default: "192.168.1.0/24,192.168.2.0/24"
 
 Mappings:
   # Use Amazon 2 Linux
