--- a/templates/datahub-deployment-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-existing-vpc-2-subnets.yaml
@@ -42,6 +42,7 @@ Metadata:
             - CreateMSK
             - KafkaVersion
             - MSKInstanceType
+            - MSKVolumeSize
         - Label:
             default: EKS Control Panel Configuration
           Parameters:
@@ -158,6 +159,8 @@ Metadata:
           default: Kafka Version
         MSKInstanceType:
           default: MSK Instance Type
+        MSKVolumeSize:
+          default: The MSK Volume Size
         ControllerHostNetwork:
           default: Deploy EKS load balancer controller
         ElbCertArn:
@@ -377,6 +380,10 @@ Parameters:
       ConstraintDescription: Must contain valid MSK instance type
       Default: kafka.m5.large
       Description: EC2 instance type for the Amazon MSK instances
+      Type: String
+    MSKVolumeSize:
+      Default: 10
+      Description: MSK Volume Size in GB
       Type: String
     KafkaVersion:
       AllowedValues:
@@ -650,6 +657,7 @@ Resources:
           EksClusterName: !Sub "${AWS::StackName}"
           MSKInstanceType: !Ref MSKInstanceType
           KafkaVersion: !Ref KafkaVersion
+          MSKVolumeSize: !Ref MSKVolumeSize
 
     EKSPreRequsiteStack:
       Condition: isCreateEKS
