--- a/templates/datahub-deployment-existing-vpc-3-subnets.yaml
+++ b/templates/datahub-deployment-existing-vpc-3-subnets.yaml
@@ -44,6 +44,7 @@ Metadata:
             - CreateMSK
             - KafkaVersion
             - MSKInstanceType
+            - MSKVolumeSize
         - Label:
             default: EKS Control Panel Configuration
           Parameters:
@@ -164,6 +165,8 @@ Metadata:
           default: Kafka Version
         MSKInstanceType:
           default: MSK Instance Type
+        MSKVolumeSize:
+          default: The MSK Volume Size
         ControllerHostNetwork:
           default: Deploy EKS load balancer controller
         ElbCertArn:
@@ -389,6 +392,10 @@ Parameters:
       ConstraintDescription: Must contain valid MSK instance type
       Default: kafka.m5.large
       Description: EC2 instance type for the Amazon MSK instances
+      Type: String
+    MSKVolumeSize:
+      Default: 10
+      Description: MSK Volume Size in GB
       Type: String
     KafkaVersion:
       AllowedValues:
