--- a/templates/nested/2-subnets/msk.yaml
+++ b/templates/nested/2-subnets/msk.yaml
@@ -15,6 +15,7 @@ Metadata:
           - EksClusterName
           - KafkaVersion
           - MSKInstanceType
+          - MSKVolumeSize
 
     ParameterLabels:
       NodeSecurityGroup:
@@ -35,6 +36,8 @@ Metadata:
         default: Kafka Version
       MSKInstanceType:
         default: MSK Instance Type
+      MSKVolumeSize:
+        default: The MSK Volume Size
 
 Parameters:
   NodeSecurityGroup:
@@ -74,6 +77,10 @@ Parameters:
   EksClusterName:
     Type: String
     Description: The EksClusterName
+  MSKVolumeSize:
+    Default: 10
+    Description: MSK Volume Size in GB
+    Type: String
 
 
 Resources:
@@ -139,7 +146,7 @@ Resources:
                   - !Ref MSKSecurityGroup
                 StorageInfo:
                     EBSStorageInfo:
-                        VolumeSize: 10
+                        VolumeSize: !Ref MSKVolumeSize
             OpenMonitoring:
                 Prometheus:
                     JmxExporter:
