--- a/templates/nested/msk.yaml
+++ b/templates/nested/msk.yaml
@@ -16,6 +16,7 @@ Metadata:
           - EksClusterName
           - KafkaVersion
           - MSKInstanceType
+          - MSKVolumeSize
 
     ParameterLabels:
       NodeSecurityGroup:
@@ -38,6 +39,8 @@ Metadata:
         default: Kafka Version
       MSKInstanceType:
         default: MSK Instance Type
+      MSKVolumeSize:
+        default: The MSK Volume Size
 
 Parameters:
   NodeSecurityGroup:
@@ -80,6 +83,10 @@ Parameters:
   EksClusterName:
     Type: String
     Description: The EksClusterName
+  MSKVolumeSize:
+    Default: 10
+    Description: MSK Volume Size in GB
+    Type: String
 
 
 Resources:
@@ -146,7 +153,7 @@ Resources:
                   - !Ref MSKSecurityGroup
                 StorageInfo:
                     EBSStorageInfo:
-                        VolumeSize: 10
+                        VolumeSize: !Ref MSKVolumeSize
             OpenMonitoring:
                 Prometheus:
                     JmxExporter:
