--- a/templates/datahub-deployment-cleanup.yaml
+++ b/templates/datahub-deployment-cleanup.yaml
@@ -453,7 +453,7 @@ Resources:
                 NLB_TAG=$(aws elbv2 describe-tags --resource-arns $NLB_RESOURCE_ARN --region ${AWS::Region} --no-paginate --output text|grep "elbv2.k8s.aws/cluster"|awk '{print $3}')
                 if [ "$NLB_TAG" == "${OldCFNStackName}" ]; then
                   NLB_TG=$(aws elbv2 describe-target-groups --load-balancer-arn $NLB_RESOURCE_ARN --region ${AWS::Region} --no-paginate --query 'TargetGroups[*].TargetGroupArn' --output text)
-                  aws elbv2 delete-load-balancer --load-balancer-arn {NLB_RESOURCE_ARN --region ${AWS::Region}
+                  aws elbv2 delete-load-balancer --load-balancer-arn $NLB_RESOURCE_ARN --region ${AWS::Region}
                   echo "deleting ingress NLB target group from ${OldCFNStackName}..."
                   aws elbv2 delete-target-group --target-group-arn $NLB_TG  --region ${AWS::Region} --no-paginate
                 fi
