--- a/templates/nested/2-subnets/msk.yaml
+++ b/templates/nested/2-subnets/msk.yaml
@@ -16,6 +16,7 @@ Metadata:
           - KafkaVersion
           - MSKInstanceType
           - MSKVolumeSize
+          - NumberOfBrokerNodes
 
     ParameterLabels:
       NodeSecurityGroup:
@@ -38,6 +39,8 @@ Metadata:
         default: MSK Instance Type
       MSKVolumeSize:
         default: The MSK Volume Size
+      NumberOfBrokerNodes:
+        default: The Number of MSK Brokers
 
 Parameters:
   NodeSecurityGroup:
@@ -80,6 +83,10 @@ Parameters:
   MSKVolumeSize:
     Default: 10
     Description: MSK Volume Size in GB
+    Type: String
+  NumberOfBrokerNodes:
+    Default: 3
+    Description: The number of MSK Brokers
     Type: String
 
 
@@ -126,7 +133,7 @@ Resources:
         DependsOn: MSKLogGroup
         Properties:
             ClusterName: !Sub "${MSKClusterName}"
-            NumberOfBrokerNodes: 2
+            NumberOfBrokerNodes: !Ref NumberOfBrokerNodes
             Tags:
                 CloudFormation: "true"
                 Environment: !Sub "${MSKClusterName}"
