--- a/templates/nested/2-subnets/admin.yaml
+++ b/templates/nested/2-subnets/admin.yaml
@@ -285,7 +285,7 @@ Resources:
                 set -x
                 curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
                 mv /tmp/eksctl /usr/local/bin
-                eksctl utils associate-iam-oidc-provider --cluster ${EKSClusterName} --approve
+                eksctl utils associate-iam-oidc-provider --cluster ${EKSClusterName} --approve --region ${AWS::Region}
                 helm repo add eks https://aws.github.io/eks-charts
                 helm repo update
                 echo "        serviceAccount:" > values.yaml
