sync 2-subnets with 3-subnets

--- a/templates/datahub-deployment-existing-vpc-3-subnets.yaml
+++ b/templates/datahub-deployment-existing-vpc-3-subnets.yaml
@@ -45,6 +45,7 @@ Metadata:
             - KafkaVersion
             - MSKInstanceType
             - MSKVolumeSize
+            - NumberOfBrokerNodes
         - Label:
             default: EKS Control Panel Configuration
           Parameters:
@@ -167,6 +168,8 @@ Metadata:
           default: MSK Instance Type
         MSKVolumeSize:
           default: The MSK Volume Size
+        NumberOfBrokerNodes:
+          default: The Number of MSK Brokers
         ControllerHostNetwork:
           default: Deploy EKS load balancer controller
         ElbCertArn:
@@ -396,6 +399,10 @@ Parameters:
     MSKVolumeSize:
       Default: 10
       Description: MSK Volume Size in GB
+      Type: String
+    NumberOfBrokerNodes:
+      Default: 3
+      Description: The number of MSK Brokers
       Type: String
     KafkaVersion:
       AllowedValues:
@@ -672,6 +679,8 @@ Resources:
           EksClusterName: !Sub "${AWS::StackName}"
           MSKInstanceType: !Ref MSKInstanceType
           KafkaVersion: !Ref KafkaVersion
+          MSKVolumeSize: !Ref MSKVolumeSize
+          NumberOfBrokerNodes: !Ref NumberOfBrokerNodes
 
     EKSPreRequsiteStack:
       Condition: isCreateEKS
