--- a/templates/nested/eks-cluster.yaml
+++ b/templates/nested/eks-cluster.yaml
@@ -19,6 +19,7 @@ Metadata:
             - ControlPanelSecurityGroup
             - NodeSecurityGroup
             - ProvisionSecurityGroup
+            - ElbInboundCIDRs
         - Label:
             default: Provision Stack Configuration
           Parameters:
@@ -75,6 +76,8 @@ Metadata:
           default: The Kubernetes Version
         Environment:
           default: The Environment
+        ElbInboundCIDRs:
+          default: DataHub ALB Inbound CIDRs
 
 Parameters:
     RemoveTempResources:
@@ -152,6 +155,10 @@ Parameters:
     Environment:
       Type: String
       Description: The Environment
+    ElbInboundCIDRs:
+      ConstraintDescription: The Elastic Load Balancer Inbound CIDRs
+      Type: String
+      Default: "10.0.0.0/8,192.0.0.0/8,172.0.0.0/8"
 
 Mappings:
   # Use Amazon 2 Linux
@@ -467,6 +474,12 @@ Resources:
                 else
                   aws ssm put-parameter --region ${AWS::Region} --name "$parameter" --type "String" --value "$OIDC" --overwrite --no-paginate
                 fi
+                EKSSecurityGroupId=$(aws eks describe-cluster --region ${AWS::Region} --name ${EKSClusterName} --query cluster.resourcesVpcConfig.securityGroupIds --output text)
+                echo "add ingress rule to EKS control panel security group..."
+                for cidr in $(echo ${ElbInboundCIDRs} | sed "s/,/ /g")
+                do
+                  aws ec2 authorize-security-group-ingress --region ${AWS::Region} --group-id $EKSSecurityGroupId --ip-permissions IpProtocol=tcp,FromPort=443,ToPort=443,IpRanges="[{CidrIp=$cidr,Description='grant access to EKS'}]"
+                done
                 echo "Saving security group info..."
                 clusterSecurityGroupId=$(aws eks describe-cluster --region ${AWS::Region}  --name ${EKSClusterName} --query cluster.resourcesVpcConfig.clusterSecurityGroupId  --output text)
                 parameter="/${Environment}/${EKSClusterName}/eks/clusterSecurityGroupId"
