--- a/templates/nested/eks-cluster.yaml
+++ b/templates/nested/eks-cluster.yaml
@@ -198,10 +198,6 @@ Resources:
                   - logs:CreateLogStream
                   - logs:GetLogEvents
                   - logs:PutLogEvents
-                  - logs:DescribeLogGroups
-                  - logs:DescribeLogStreams
-                  - logs:PutRetentionPolicy
-                  #- logs:CreateLogGroup
                 Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:${EC2LogGroup}:*"
                 Effect: Allow
         - PolicyName: provision-ssm-policy
@@ -213,8 +209,8 @@ Resources:
                   - ssm:GetParameters
                   - ssm:GetParameter
                   - ssm:AddTagsToResource
-                #Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${Environment}/${EKSClusterName}/*"
-                Resource: "*"
+                Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${Environment}/${EKSClusterName}/*"
+                #Resource: "*"
                 Effect: Allow
         - PolicyName: provision-kms-policy
           PolicyDocument:
@@ -242,8 +238,8 @@ Resources:
                   - secretsmanager:CreateSecret
                   - secretsmanager:GetSecretValue
                   - secretsmanager:DescribeSecret
-                #Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EKSClusterName}/*",
-                Resource: "*"
+                Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EKSClusterName}/*"
+                #Resource: "*"
                 Effect: Allow
         - PolicyName: provision-iam-policy
           PolicyDocument:
@@ -262,7 +258,6 @@ Resources:
                   - kafka:Describe*
                   - kafka:Get*
                   - kafka:List*
-                #Resource: !Sub "arn:aws:kafka:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterName}/*",
                 Resource: "*"
                 Effect: Allow
         - PolicyName: provision-autoscaling-policy
@@ -271,9 +266,17 @@ Resources:
             Statement:
               - Action:
                   - autoscaling:DescribeAutoScalingInstances
-                  - autoscaling:UpdateAutoScalingGroup
-                #Resource: !Sub "arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup/*",
+                  - autoscaling:DescribeAutoScalingGroups
+                  - autoscaling:DescribeScalingActivities
                 Resource: "*"
+                Effect: Allow
+        - PolicyName: provision-autoscaling-update-policy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Action:
+                  - autoscaling:UpdateAutoScalingGroup
+                Resource: !Sub "arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${AWS::StackName}*"
                 Effect: Allow
         - PolicyName: eks-cluster-policy
           PolicyDocument:
@@ -281,34 +284,21 @@ Resources:
             Statement:
               - Action:
                   - eks:*
-                #Resource: !Sub "arn:aws:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterName}",
-                Resource: "*"
+                Resource: !Sub "arn:aws:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterName}"
+                #Resource: "*"
                 Effect: Allow
         - PolicyName: provision-others-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
               - Action:
+                  - ec2:DescribeTags 
+                  - ec2:DescribeSecurityGroups
+                  - ec2:AuthorizeSecurityGroupIngress
                   - elasticloadbalancing:DescribeLoadBalancers
                   - elasticloadbalancing:DescribeTags
-                  - elasticloadbalancing:DeleteLoadBalancers
-                  - elasticloadbalancing:DeleteLoadBalancer
                   - elasticloadbalancing:DescribeTargetGroups
-                  - sts:*
-                  - ec2:DescribeTags 
-                  - ec2:RevokeSecurityGroupIngress
-                  - ec2:DescribeSecurityGroups
-                  - ec2:DeleteSecurityGroups
-                  - ec2:DeleteSecurityGroup
-                  - ec2:RevokeSecurityGroupIngress
-                  - ec2:AuthorizeSecurityGroupIngress
-                  - autoscaling:DeleteLaunchConfiguration
-                  - autoscaling:DescribeAutoScalingGroups
-                  - autoscaling:DescribeScalingActivities
-                  - autoscaling:DeleteAutoScalingGroup
-                  - secretsmanager:DeleteSecret
-                  - ssm:DeleteParameters
-                  - ssm:DeleteParameter
+                  #- sts:*
                 Resource: "*"
                 Effect: Allow
       Path: /
